fix text alignment of footer so that it is inline with the main site content

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -155,7 +155,7 @@ footer {
     justify-content: flex-start;
     flex-direction: column;
     align-items: left;
-    padding: 15px 6%;
+    padding: 15px 15%;
 }
 
 .flexbox-footer-row {
